--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,3 +1,13 @@
+{% set first_results = results[0] %}
+{% set second_results = results[1] %}
+{% set third_results = results[2] %}
+
+{% set first = first_results[0] %}
+{% set second = second_results[0] %}
+{% set third = third_results[0] %}
+
+{% set random = range(1, 100) | random %}
+
 <!doctype html>
 <html lang="en-US">
     <head>
@@ -6,39 +16,62 @@
         <meta name="keywords" content="autoencoder, demo, ml, ai">
         <meta name="description" content="reverse image search demo">
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
         <link rel="stylesheet" href="/static/css/main.css">
     </head>
     <body>
-        <div class="jumbotron jumbotron-fluid header">
+        <div id="first">
           <div class="container-fluid">
             <div class="row">
-              <div class="col-md-12">
-                <h1 class="display-4">Find Related Images</h1>
-                {% set first = results[0] %}
-                {% set next = range(1, 100) | random %}
-                <img id="first" "data-id"="{{ first.id }}" src="/images/{{ first.image }}" />
-                <a id="randomize" class="btn" data-id="{{ next }}" href="/nearest/{{ next }}">Get New Random Image</a>
+              <h1 class="display-4 col-md-11">
+                  Find Related Images
+              </h1>
+              <div class="col-md-1">
+                <a id="randomize" class="col-md-1" data-id="{{ random }}" href="/nearest/{{ random }}">
+                  <i class="fa fa-refresh" aria-hidden="true"></i>
+                </a>
+              </div>
+              <h2 class="col-md-12">Set 1</h2>
+            </div>
+            <div class="row">
+              <div class="col-md-12 section">
+                {% for item in first_results %}
+                <a class="thumb" href="/nearest/{{ item.id }}">
+                  <img class="result" data-id="{{ item.id }}" src="/images/{{ item.image }}" />
+                </a>
+                {% endfor %}
               </div>
             </div>
           </div>
         </div>
-
-        <div class="container-fluid">
-          <div class="row">
-            <div class="col-md-12">
-                <ul id=results>
-                {% for item in results %}
-                    {% if not loop.first %}
-                    <li><a href="/nearest/{{ item.id }}">
-                        <img class="result" data-id="{{ item.id }}" src="/images/{{ item.image }}" />
-                    </a></li>
-                    {% endif %}
-                {% endfor %}
-                <ul>
+        <div id="second">
+          <div class="container-fluid">
+            <div class="row">
+              <h2 class="col-md-12">Set 2</h2>
+              <div class="col-md-12 section">
+              {% for item in second_results %}
+                <a class="thumb" href="/nearest/{{ item.id }}">
+                  <img class="result" data-id="{{ item.id }}" src="/images/{{ item.image }}" />
+                </a>
+              {% endfor %}
             </div>
           </div>
         </div>
-
+      </div>
+      <div id="third">
+        <div class="container-fluid">
+          <div class="row">
+            <h2 class="col-md-12">Set 3</h2>
+            <div class="col-md-12 section">
+            {% for item in third_results %}
+              <a class="thumb" href="/nearest/{{ item.id }}">
+                <img class="result" data-id="{{ item.id }}" src="/images/{{ item.image }}" />
+              </a>
+            {% endfor %}
+            </div>
+          </div>
+        </div>
+      </div>
         <script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
         <script src="/static/js/main.js"></script>
     </body>
